--- a/HomeWork6/HomeWork6/Base.lproj/Main.storyboard
+++ b/HomeWork6/HomeWork6/Base.lproj/Main.storyboard
@@ -32,14 +32,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rme-jP-C58">
-                                <rect key="frame" x="114" y="203" width="168" height="35"/>
+                                <rect key="frame" x="112" y="162" width="168" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.86686705590000002" green="0.88150376080000004" blue="0.68873950149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Сохранить строку"/>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="1ed-6k-fcR">
-                                <rect key="frame" x="80" y="296" width="240" height="237"/>
+                                <rect key="frame" x="77" y="249" width="240" height="237"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="secondarySystemFillColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
@@ -47,7 +47,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Вывод:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6H9-Ag-HHW">
-                                <rect key="frame" x="80" y="267" width="56" height="21"/>
+                                <rect key="frame" x="77" y="220" width="56" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" systemColor="tintColor"/>
@@ -64,11 +64,20 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DHO-r1-XRP">
-                                <rect key="frame" x="120" y="583" width="153" height="35"/>
+                                <rect key="frame" x="121" y="523" width="153" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemPinkColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Очистить вывод">
+                                    <color key="baseForegroundColor" red="0.86686705590000002" green="0.88150376080000004" blue="0.68873950149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </buttonConfiguration>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0fY-ll-fLn">
+                                <rect key="frame" x="118" y="598" width="160" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Очистить память">
                                     <color key="baseForegroundColor" red="0.86686705590000002" green="0.88150376080000004" blue="0.68873950149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </buttonConfiguration>
                             </button>
@@ -79,6 +88,7 @@
                     <navigationItem key="navigationItem" id="qsd-xM-9lj"/>
                     <connections>
                         <outlet property="button" destination="Rme-jP-C58" id="6QL-IB-R1u"/>
+                        <outlet property="clearCach" destination="0fY-ll-fLn" id="E9h-Vj-IZo"/>
                         <outlet property="clearTextView" destination="DHO-r1-XRP" id="kSF-56-wvQ"/>
                         <outlet property="textField" destination="Rmo-di-fgC" id="EGu-mK-x3n"/>
                         <outlet property="textView" destination="1ed-6k-fcR" id="xne-Pg-sPG"/>
